--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body {
 }
 
 a {
-  color: #fff;
+  color: skyblue;
+  text-decoration: none;
 }
 
 .row {
@@ -41,7 +42,7 @@ a {
 }
 
 header {
-  background-color: #84b4b1;
+  background-color: #8493b4;
   color: #fff;
   text-align: center;
   padding: 30px 0 120px;
@@ -65,7 +66,16 @@ header h1 span {
 header p {
   padding-top: 30px;
 }
-
+#about h1
+{
+  font-size: 30px;
+  text-align: center;
+}
+#about p
+{
+  text-align: center;
+  font-size: 25px;
+}
 .gallery {
   padding: 40px 0 300px;
   position: relative;
